# VoidRelay-c2-link

./: README.md  builder.py  installer.py  requirements.txt
AndroidClient/app/: build.gradle
AndroidClient/app/src/main/: AndroidManifest.xml
AndroidClient/app/src/main/java/com/example/crossc2/: ApiClient.java  C2AccessibilityService.java
AndroidClient/app/src/main/res/xml/: accessibility_service_config.xml
perl_c2_server/: server.pl
perl_c2_server/templates/: dashboard.html.ep  login.html.ep
perl_c2_server/templates/layouts/: footer.html.ep  main.html.ep
windows_client/: Cargo.toml
windows_client/src/: main.rs
